--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,8 @@
 }
 html {
     font-family: 'Open Sans', sans-serif;
-    font-size: 33px;
+    font-size: 20px;
+    font-weight: 300;
     text-rendering: optimizeLegibility;
 }
 .row {
@@ -26,4 +27,84 @@ header {
     height: 100vh;
     background-size: cover;
     background-position: center;
+}
+
+h1 {
+    font-size: 340%;
+    color: rgb(255, 255, 255);
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    word-spacing: 3px;
+}
+
+.btn:link,
+.btn:visited {
+    display: inline-block;
+    text-decoration: none;
+    margin-top: 5px;
+    padding: 15px 30px;
+    font-weight: 300;
+    color: white;
+    border-radius: 200px;
+    transition: background-color 0.3s, border 0.3s, color 0.3s;
+}
+
+.btn-full:link,
+.btn-full:visited {
+    background-color: #f39c12;
+    border-radius: 200px;
+    color: white;
+    border: 1px solid #f39c12;
+    margin-right: 15px; 
+}
+
+.btn-ghost:link,
+.btn-ghost:visited{
+    border: 1px solid #f39c12;
+    color: #f39c12;
+}
+.btn-full:hover,
+.btn-full:active {
+    border: 1px solid #fcaa2f; 
+}
+
+.btn-ghost:hover,
+.btn-ghost:link:active{
+    color:white;
+}
+.btn:hover {
+    background-color: #fcaa2f;
+}
+.logo {
+    float: left;
+    margin-top: 20px;
+
+}
+.main-nav {
+    float: right;
+    list-style: none;
+    margin-top: 55px;
+   
+}
+
+.main-nav li {
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.main-nav li a:link,
+.main-nav li a:visited {
+    padding: 8px 0;
+    font-size: 90%;
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.2s;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {
+    border-bottom: 2px solid #fcaa2f;
 }
