--- a/resources/css/grid.css
+++ b/resources/css/grid.css
@@ -134,11 +134,11 @@
 
 /*  SECTIONS  ============================================================================= */
 
-.section {
+/* .section {
 	clear: both;
 	padding: 0px;
 	margin: 0px;
-}
+} */
 
 /*  GROUPING  ============================================================================= */
 
