--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,15 +29,49 @@ header {
     background-position: center;
 }
 
+h1,
+h2,
+h3 {
+    font-weight: 300;
+    text-transform: uppercase;
+    
+   
+}
 h1 {
     font-size: 340%;
     color: rgb(255, 255, 255);
-    font-weight: 300;
-    text-transform: uppercase;
-    letter-spacing: 1.2px;
+    margin-bottom: 20px;
     word-spacing: 3px;
+    letter-spacing: 1.2px;
+
+}
+h2{
+    word-spacing: 2px;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: 1.2px;
+
+}
+h2:after {
+    display: block;
+    height: 2px;
+    background-color: #f39c12;
+    content: " ";
+    margin: 0px auto;
+    width: 100px;
+    margin-top: 30px;
+}
+h3 {
+    font-size: 110%;
+    margin-bottom: 15px;
 }
 
+.long-copy {
+    line-height: 145%;
+    width: 70%;
+    text-align: center;
+    margin-left: 15%;
+}
 .btn:link,
 .btn:visited {
     display: inline-block;
@@ -107,4 +141,42 @@ h1 {
 .main-nav li a:hover,
 .main-nav li a:active {
     border-bottom: 2px solid #fcaa2f;
+}
+
+section {
+    padding:80px 0;
+}
+.box {
+    padding: 1%;
+}
+.box p {
+    font-size: 90%;
+    line-height: 145%;
+}
+
+.icon-big {
+    font-size: 300%;
+    display: block;
+    color: #fcaa2f;
+    margin-bottom: 15px;
+}
+.meals-showcase {
+    width: 100%;
+    list-style: none;
+}
+.meals-showcase li {
+    display: block;
+    float: left;
+    width: 33.3%;
+
+}
+
+.meal-photo {
+    width: 100%;
+    margin: 0;
+
+}
+.meal-photo img {
+    width: 100%;
+    height: 330px;
 }
