--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,4 @@
-* {
-    padding:0;
-    margin:0;
-    box-sizing: border-box
-}
+
 html {
     font-family: 'Open Sans', sans-serif;
     font-size: 20px;
@@ -11,8 +7,9 @@ html {
 }
 .row {
     max-width: 1140px;
-    margin: 0 auto
+    margin: 0 auto;
 }
+
 
 .main-text {
     position: absolute;
@@ -71,6 +68,9 @@ h3 {
     width: 70%;
     text-align: center;
     margin-left: 15%;
+}
+.features .long-copy {
+    margin-bottom: 20px;
 }
 .btn:link,
 .btn:visited {
@@ -145,9 +145,11 @@ h3 {
 
 section {
     padding:80px 0;
+    clear:both;
 }
+
 .box {
-    padding: 1%;
+    padding: .6%;
 }
 .box p {
     font-size: 90%;
@@ -163,20 +165,83 @@ section {
 .meals-showcase {
     width: 100%;
     list-style: none;
+    padding: 0;
+
 }
+.meals-section {
+    padding:0;
+}
+
 .meals-showcase li {
-    display: block;
+    display:block;
     float: left;
-    width: 33.3%;
+    width: 33.3333%;
 
 }
-
-.meal-photo {
+.dish {
     width: 100%;
     margin: 0;
+    overflow: hidden;
+    background-color: black;
+}
+
+.dish img {
+    
+    opacity: 0.7;
+    width: 100%;
+    height: 325px;
+    transform: scale(1.15);
+    transition: opacity .5s transform .5s;
 
 }
-.meal-photo img {
-    width: 100%;
-    height: 330px;
+.dish img:hover {
+    transform: scale(1.05);
+    opacity: 1;
 }
+
+/* How it works section */
+
+
+.steps-box:first-child {
+    text-align: right;
+    padding-right: 3%;
+    max-width: 41%;
+    margin-top: 30px;
+}
+
+.steps-box:last-child {
+    padding-left: 3%;
+    margin-top: 70px;
+   
+}
+.app-screen {
+    width: 110%;
+}
+.btn-app img:first-child {
+    height: 100px;
+    margin-right: 10px;
+}
+.btn-app img:last-child {
+    height: 180px;
+}
+.steps {
+    margin-bottom: 50px;
+}
+.steps div {
+    color: #f39c12;
+    border: 2px solid #f39c12;
+    display: inline-block;
+    border-radius: 50%;
+    height: 55px;
+    width: 55px;
+    text-align: center;
+    padding: 5px;
+    float: left;
+    font-size: 150%;
+    margin-right: 20px;
+   
+}
+
+
+
+
