--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -88,7 +88,8 @@ h3 {
     margin-bottom: 20px;
 }
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
     display: inline-block;
     text-decoration: none;
     margin-top: 5px;
@@ -100,7 +101,8 @@ h3 {
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit] {
     background-color: #f39c12;
     border-radius: 200px;
     color: white;
@@ -114,7 +116,9 @@ h3 {
     color: #f39c12;
 }
 .btn-full:hover,
-.btn-full:active {
+.btn-full:active,
+input[type=submit]:hover,
+input[type=submit]:active {
     border: 1px solid #fcaa2f; 
 }
 
@@ -122,7 +126,8 @@ h3 {
 .btn-ghost:link:active{
     color:white;
 }
-.btn:hover {
+.btn:hover,
+input[type=submit]:hover {
     background-color: #fcaa2f;
 }
 .logo {
@@ -379,6 +384,82 @@ background-size: cover;
 }
 .plan-box ul span {
     margin-left: 40px;
+}
+
+/* Contact Form  */
+
+.contact-form {
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+textarea {
+    height: 100px;
+}
+input[type=checkbox]{
+    margin: 10px 5px 10px 0;
+}
+*:focus {
+    outline:none;
+}
+
+/* FOOTER */
+
+footer {
+    background-color: rgb(46, 43, 43);
+}
+.foot-nav {
+    list-style: none;
+    float: left;
+}
+.footer-nav li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.social-links {
+    list-style: none;
+    float: right;
+}
+.social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+a {
+    color:  #f39c12;
+    text-decoration: none;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+    text-decoration: none;
+    border: 0;
+
+}
+footer p {
+    font-size: 70%;
+    color: white;
+    display: inline-block;
+    margin-left: 10%;
+    
+}
+footer {
+    height: 100%;
+}
+.end {
+    padding-bottom:0;
+    padding-top: 100px;
 }
 
 
