smooth scrolling added

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -164,6 +164,7 @@ input[type=submit]:hover {
     left: 0;
     background-color: white;
     box-shadow: 0 2px 2px rgb(177, 174, 174);
+    z-index: 9999;
      
 }
 .sticky .main-nav {
